src/test/ui/hr-subtype/hr-subtype.free_x_vs_free_x.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/hr-subtype.rs:102:1
   |
LL | fn main() {
   | ^^^^^^^^^

error: aborting due to previous error

